tests/baselines/reference/varArgsOnConstructorTypes.errors.txt
varArgsOnConstructorTypes.ts(23,1): error TS2454: Variable 'reg' is used before being assigned.


==== varArgsOnConstructorTypes.ts (1 errors) ====
    export class A {
        constructor(ctor) { }
    }
    
    export class B extends A {
        private p1: number;
        private p2: string;
    
        constructor(element: any, url: string) {
           super(element);
            this.p1 = element;
            this.p2 = url;
        }
    }
    
    export interface I1 {
        register(inputClass: new(...params: any[]) => A);
        register(inputClass: { new (...params: any[]): A; }[]);
    }
    
    
    var reg: I1;
    reg.register(B);
    ~~~
!!! error TS2454: Variable 'reg' is used before being assigned.
    